--- a/파이썬 클린코드 ver 2.ipynb
+++ b/파이썬 클린코드 ver 2.ipynb
@@ -306,44 +306,95 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2bb9f7a4",
+   "cell_type": "markdown",
+   "id": "c838de56",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Chapter 5. 데코레이터를 사용한 코드 개선"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "360733ed",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from dataclasses import dataclass\n",
+    "\n",
+    "def _resolver_method(self, attr):\n",
+    "    if attr.startswith(\"resolve_\"):\n",
+    "        *_, actual_attr = attr.partition(\"resolve_\")\n",
+    "    else:\n",
+    "        actual_attr = attr\n",
+    "    try:\n",
+    "        return self.__dict__[actual_attr]\n",
+    "    except KeyError as e:\n",
+    "        raise AttributeError from e\n",
+    "    \n",
+    "def with_resolver(self):  # self / cls 차이?\n",
+    "    self.__getattr__ = _resolver_method\n",
+    "    return self\n",
+    "\n",
+    "@dataclass\n",
+    "@with_resolver\n",
+    "class Customer:\n",
+    "    customer_id: str\n",
+    "    name: str\n",
+    "    address: str"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "3bfde01c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "customer = Customer(\"1\", \"name\", \"address\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "e57e2288",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "customer.resolve_customer_id"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "0b826f03",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'name'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "customer.resolve_name"
+   ]
   },
   {
    "cell_type": "code",
@@ -394,7 +445,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
