230327 | chapter 5 memo update

--- a/파이썬 클린코드 ver 2.ipynb
+++ b/파이썬 클린코드 ver 2.ipynb
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "162337dc",
    "metadata": {},
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "ffc03ebc",
    "metadata": {
     "scrolled": true
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "5a81c280",
    "metadata": {},
    "outputs": [
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "d10bb2f9",
    "metadata": {},
    "outputs": [],
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "id": "cc267f21",
    "metadata": {},
    "outputs": [],
@@ -465,7 +465,7 @@
     "    def serialize(self, event) -> dict:\n",
     "        return {\n",
     "            field: transformation(getattr(event, field))\n",
-    "            for filed, transformation in\n",
+    "            for field, transformation in\n",
     "            self.serialization_fields.items()\n",
     "        }\n",
     "    \n",
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "id": "b1564b3c",
    "metadata": {},
    "outputs": [
@@ -505,7 +505,7 @@
        "'1234'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,17 +517,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "id": "0ecffb50",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2023, 3, 19, 19, 22, 24, 50014)"
+       "datetime.datetime(2023, 3, 27, 8, 34, 3, 601599)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,23 +538,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "id": "9c9501fe",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "LoginEvent(username='name', password='1234', ip='127.0.0.1', timestamp=datetime.datetime(2023, 3, 19, 19, 22, 24, 50014))"
+       "LoginEvent(username='name', password='1234', ip='127.0.0.1', timestamp=datetime.datetime(2023, 3, 27, 8, 34, 3, 601599))"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "bf6f6149",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'username': 'name',\n",
+       " 'password': '**민감한 정보 삭제**',\n",
+       " 'ip': '127.0.0.1',\n",
+       " 'timestamp': '2023-03-27 08:34'}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.serialize()"
    ]
   },
   {
@@ -569,7 +593,59 @@
    "source": [
     "### Decorator Coroutine\n",
     "\n",
-    "![image.png](attachment:image.png)"
+    "![image.png](attachment:image.png)\n",
+    "\n",
+    "- 메인루틴: 위에서 아래로 순차적으로 진행되는 프로세스\n",
+    "- 서브루틴: 메인루틴에서 함수를 만나면 함수 선언 위치로 이동했다가 return에 의해 다시 함수 호출 부분으로 돌아와 다시 프로세스를 진행하는 흐름\n",
+    "\n",
+    "**❗️next를 통해 generator를 실행했을 때, yield를 만나면 그 위치를 기억하고 멈췄다가 다시 next를 실행하면 다음 yield를 만나기 전까지 실행**\n",
+    "\n",
+    "- yield는 메인루틴과 서브루틴이 양방향 통신을 가능하게 하기 때문에 서브루틴을 동시에 여러개 실행할 수 있게 해줌 == coroutine\n",
+    "- 즉, coroutine은 routine 실행 중 멈추는 것이 가능하고, 특정 위치로 돌아갔다가 다시 원래 위치로 돌아와 흐름을 수행하기 때문에 동시성 프로그래밍이 가능하게 해줌\n",
+    "- coroutine은 하나의 thread를 사용하기 때문에 scheduling overhead가 매우 적음"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "dedcb784",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "140\n",
+      "200\n"
+     ]
+    }
+   ],
+   "source": [
+    "# next 메서드 없이 coroutine 사용\n",
+    "\n",
+    "from functools import wraps\n",
+    "# 데코레이터 생성\n",
+    "def coroutine(func):\n",
+    "    \"\"\"Decorator run until yield\"\"\"\n",
+    "    @wraps(func)\n",
+    "    def primer(*args, **kwargs):\n",
+    "        gen = func(*args, **kwargs)\n",
+    "        next(gen)\n",
+    "        return gen\n",
+    "    return primer\n",
+    "# Coroutine 생성\n",
+    "@coroutine\n",
+    "def sumer():\n",
+    "    total = 0\n",
+    "    term = 0\n",
+    "    while True:\n",
+    "        term = yield total\n",
+    "        total += term\n",
+    "sexysum = sumer()\n",
+    "print(sexysum.send(100))  # 100\n",
+    "print(sexysum.send(40))  # 140\n",
+    "print(sexysum.send(60))  # 200"
    ]
   },
   {
@@ -782,54 +858,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "746ece21",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "05903342",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "08ea205e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2953d1e6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4e728107",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c0dacc81",
-   "metadata": {},
-   "source": [
-    "## Chapter 5. 데코레이터를 사용한 코드 개선"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "360733ed",
    "metadata": {},
    "outputs": [],
@@ -846,7 +876,6 @@
     "    except KeyError as e:\n",
     "        raise AttributeError from e\n",
     "    \n",
-    "@classmethod\n",
     "def with_resolver(cls):\n",
     "    \"\"\"\n",
     "    static method: 객체와 독립적이지만, 로직상 클래스 내에 포함되는 메서드이다. / 인스턴스 상태를 변화시키지 않는 메서드를 만들 때 사용한다.\n",
@@ -867,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "id": "3bfde01c",
    "metadata": {},
    "outputs": [],
@@ -877,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "id": "e57e2288",
    "metadata": {},
    "outputs": [
@@ -887,7 +916,7 @@
        "'1'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -898,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "id": "0b826f03",
    "metadata": {},
    "outputs": [
@@ -908,7 +937,7 @@
        "'name'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -916,6 +945,78 @@
    "source": [
     "customer.resolve_name"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69316413",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95f34afe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36621cdb",
+   "metadata": {},
+   "source": [
+    "## 6. 디스크립터로 더 멋진 객체 만들기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0984a940",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63e4a90f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f885cb6a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51b3bb2e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1c06c04",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19209d31",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -966,7 +1067,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
